--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <header class="masthead">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">GATHER - ANALYZE - TRANSFORM</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                <p>Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</p>
+                <a class="btn btn-primary btn-xl" href="#about">About Me</a>
             </div>
         </div>
     </header>
@@ -82,10 +82,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 text-center">
-                    <h2 class="section-heading text-white">We've got what you need!</h2>
+                    <h1 class="section-heading text-white">Kshitij Yadav</h1>
+                    <h2 class="section-heading text-white">Masters in Business Analytics, concenteration in Data Science and Marketing</h2>
+                    <h2 class="section-heading text-white">University of Texas at Dallas</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>
+                    <p class="text-faded">Hi, My name is Kshitij Yadav. I am a graduate student at University of Texas at Dallas, pursuing my Masters in Business Analytics with concenteration in Data Science and Marketing Analytics. When not up to my elbows in analysing Data, I love going for a quick run or play golf or more so easy, read a book! With two years of work experience working as a Business Associate ( Business Analyst) in ZS Associate, I have had an amazing opportunity to be exposed to an incredeble world where Data is the new fuel. Having hands on experience with excellent analytical languages such as Python, R, SAS etc. I have worked on end to end Data analysis on structured as well as unstructured datasets for Multi Billion dollar companies and helped them improve their businesses by the use of Data mining and prediction. I also have an opportunity to intern with Colaberry School Of Data Analytics as a Marketing Analyst and Data Science Intern where I was involved in creating and maintaining the infrastructure to collect all the data for company’s needs such as product as well as on the services side in regards to sales and recruiting. Connect that data with the tools that need it and build reports and dashboards for internal teams to track their progress and make data-driven decisions using advance statistical as well as modelling techniques. In terms of skills, I have worked on various projects which can be found here. I have hands on experience with Python Pandas, NumPy, Sci-Kit, SciPy, R programming language, SAS, Tensor Flow and Machine Learning algorithms.</p>
+                    <!--<a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>-->
+                    <p>Click to download my resume<p>
+
+                    <a href="/img/wordcloud.jpg" download>
+                    <img border="0" src="/img/wordcloud.jpg" width="104" height="142">
+                    </a>
                 </div>
             </div>
         </div>
