--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 offset-lg-2 text-center">
+                <div class="col-lg-12 text-center">
                     <h1 class="section-heading text-white">Kshitij Yadav</h1>
                     <h2 class="section-heading text-white">Masters in Business Analytics, concenteration in Data Science and Marketing</h2>
                     <h2 class="section-heading text-white">University of Texas at Dallas</h2>
                     <hr class="light">
                     <p class="text-faded">Hi, My name is Kshitij Yadav. I am a graduate student at University of Texas at Dallas, pursuing my Masters in Business Analytics with concenteration in Data Science and Marketing Analytics. When not up to my elbows in analysing Data, I love going for a quick run or play golf or more so easy, read a book! With two years of work experience working as a Business Associate ( Business Analyst) in ZS Associate, I have had an amazing opportunity to be exposed to an incredeble world where Data is the new fuel. Having hands on experience with excellent analytical languages such as Python, R, SAS etc. I have worked on end to end Data analysis on structured as well as unstructured datasets for Multi Billion dollar companies and helped them improve their businesses by the use of Data mining and prediction. I also have an opportunity to intern with Colaberry School Of Data Analytics as a Marketing Analyst and Data Science Intern where I was involved in creating and maintaining the infrastructure to collect all the data for company’s needs such as product as well as on the services side in regards to sales and recruiting. Connect that data with the tools that need it and build reports and dashboards for internal teams to track their progress and make data-driven decisions using advance statistical as well as modelling techniques. In terms of skills, I have worked on various projects which can be found here. I have hands on experience with Python Pandas, NumPy, Sci-Kit, SciPy, R programming language, SAS, Tensor Flow and Machine Learning algorithms.</p>
                     <!--<a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>-->
-                    <p>Click to download my resume<p>
+                    <p class="text-faded">Click to download my resume<p>
 
                     <a href="/img/wordcloud.jpg" download>
                     <img border="0" src="/img/wordcloud.jpg" width="104" height="142">
