--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h1 class="section-heading text-white">Kshitij Yadav</h1>
-                    <h3 class="section-heading text-white">Masters in Business Analytics, conc in Data Science and Marketing</h3>
+                    <h3 class="section-heading text-white"><br>Masters in Business Analytics, conc in Data Science and Marketing</h3>
                     <h3 class="section-heading text-white">University of Texas at Dallas</h3>
                     <hr class="light">
                     <p class="text-faded">Hi, My name is Kshitij Yadav. I am a graduate student at University of Texas at Dallas, pursuing my Masters in Business Analytics with concenteration in Data Science and Marketing Analytics. When not up to my elbows in analysing Data, I love going for a quick run or play golf or more so easy, read a book! With two years of work experience working as a Business Associate ( Business Analyst) in ZS Associate, I have had an amazing opportunity to be exposed to an incredeble world where Data is the new fuel. Having hands on experience with excellent analytical languages such as Python, R, SAS etc. I have worked on end to end Data analysis on structured as well as unstructured datasets for Multi Billion dollar companies and helped them improve their businesses by the use of Data mining and prediction. I also have an opportunity to intern with Colaberry School Of Data Analytics as a Marketing Analyst and Data Science Intern where I was involved in creating and maintaining the infrastructure to collect all the data for company’s needs such as product as well as on the services side in regards to sales and recruiting. Connect that data with the tools that need it and build reports and dashboards for internal teams to track their progress and make data-driven decisions using advance statistical as well as modelling techniques. In terms of skills, I have worked on various projects which can be found here. I have hands on experience with Python Pandas, NumPy, Sci-Kit, SciPy, R programming language, SAS, Tensor Flow and Machine Learning algorithms.</p>
@@ -102,41 +102,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Work Experience</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <!--<i class="fa fa-4x fa-diamond text-primary sr-icons"></i>-->
+                        <!--<h3>Sturdy Templates</h3>-->
+                        <img src="/img/zs.png">
+                        <h3><a href="https://www.zs.com/">ZS Associates</a></h3>
+                        <p class="text-muted">Business Associate ( Business Analyst )</p>
+                     </div>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <div class="service-box">
+                        <!--<i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>-->
+                        <!--<h3>Ready to Ship</h3>-->
+                        <img src="/img/cola.png">
+                        <h3><a href="http://www.colaberry.com/">Colaberry</a></h3>
+                        <p class="text-muted">Marketing Analyst and Data Science Intern</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
-                    </div>
-                </div>
+              
             </div>
         </div>
     </section>
