--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="service-box">
                         <!--<i class="fa fa-4x fa-diamond text-primary sr-icons"></i>-->
                         <!--<h3>Sturdy Templates</h3>-->
-                        <img src="/img/zs.png">
+                        <img src="/img/zs.png" width="150" height="150">
                         <h3><a href="https://www.zs.com/">ZS Associates</a></h3>
                         <p class="text-muted">Business Associate ( Business Analyst )</p>
                      </div>
@@ -122,7 +122,7 @@
                     <div class="service-box">
                         <!--<i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>-->
                         <!--<h3>Ready to Ship</h3>-->
-                        <img src="/img/cola.png">
+                        <img src="/img/cola.png" width="150" height="150">
                         <h3><a href="http://www.colaberry.com/">Colaberry</a></h3>
                         <p class="text-muted">Marketing Analyst and Data Science Intern</p>
                     </div>
