--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
         </div>
     </section>
 
-    <div class="call-to-action bg-dark">
+    <!--<div class="call-to-action bg-dark">
         <div class="container text-center">
             <h2>Free Download at Start Bootstrap!</h2>
             <a class="btn btn-default btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
         </div>
-    </div>
+    </div>-->
 
     <section id="contact">
         <div class="container">
@@ -242,15 +242,21 @@
                 <div class="col-lg-8 offset-lg-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>If you think we can work together to create something awesome, get in touch with me!</p>
                 </div>
-                <div class="col-lg-4 offset-lg-2 text-center">
+                <div class="col-lg-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>916-793-9923</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-2 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:kshitijyad@ygmail.com">kshitijyad@ygmail.com</a></p>
+                </div>
+                <div class="col-lg-2 col-lg-offset-3 text-center">
+                    <a href="https://github.com/kshitijyad" class="fa fa-github fa-3x wow bounceIn"></a>
+                </div>
+                <div class="col-lg-2  text-center">
+                    <a href="https://www.linkedin.com/in/kshitijyad" class="fa fa-linkedin fa-3x wow bounceIn"></a>
                 </div>
             </div>
         </div>
