--- a/index.html
+++ b/index.html
@@ -244,18 +244,18 @@
                     <hr class="primary">
                     <p>If you think we can work together to create something awesome, get in touch with me!</p>
                 </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-3 col-lg-offset-3 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>916-793-9923</p>
                 </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-3 col-lg-offset-3 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:kshitijyad@ygmail.com">kshitijyad@ygmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-lg-offset-3 text-center">
                     <a href="https://github.com/kshitijyad" class="fa fa-github fa-3x wow bounceIn"></a>
                 </div>
-                <div class="col-lg-3  text-center">
+                <div class="col-lg-3 col-lg-offset-3 text-center">
                     <a href="https://www.linkedin.com/in/kshitijyad" class="fa fa-linkedin fa-3x wow bounceIn"></a>
                 </div>
             </div>
