--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-3 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:kshitijyad@ygmail.com">kshitijyad@ygmail.com</a></p>
+                    <p><a href="mailto:kshitijyad@gmail.com">kshitijyad@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-lg-offset-3 text-center">
                     <a href="https://github.com/kshitijyad" class="fa fa-github fa-3x wow bounceIn"></a>
