--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <!--<a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>-->
                     <p class="text-faded">Click to download my resume<p>
 
-                    <a href="/img/wordcloud.jpg" download>
-                    <img border="0" src="/img/wordcloud.jpg" width="104" height="142">
+                    <a href="/img/resume-logo.jpg" download>
+                    <img border="0" src="/img/resume-logo.jpg" width="100" height="60">
                     </a>
                 </div>
             </div>
