--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p class="text-faded">Click to download my resume<p>
 
                     <a href="/img/resume-logo.jpg" download>
-                    <img border="0" src="/img/resume-logo.jpg" width="100" height="60">
+                    <a class="btn btn-primary btn-xl" href="#about">My Resume</a>
                     </a>
                 </div>
             </div>
