--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">GATHER - ANALYZE - TRANSFORM</h1>
                 <hr>
-                <p>Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</p>
+                <p><font color="#CBE32D">Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</font></p>
                 <a class="btn btn-primary btn-xl" href="#about">About Me</a>
             </div>
         </div>
