--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="container">
-            <a class="navbar-brand" href="#page-top"><font color="ffffff">Kshitij Yadav</font></a>
+            <a class="navbar-brand" href="#page-top"><font color="#FFFF00">Kshitij Yadav</font></a>
             <div class="collapse navbar-collapse" id="navbarExample">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -72,7 +72,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">GATHER - ANALYZE - TRANSFORM</h1>
                 <hr>
-                <p><font color="ffffff">Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</font></p>
+                <p><font color="#FFFF00">Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</font></p>
                 <a class="btn btn-primary btn-xl" href="#about">About Me</a>
             </div>
         </div>
