--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
             <div class="collapse navbar-collapse" id="navbarExample">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about"><font color="#FFFF00">About</font></a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services"><font color="#FFFF00">Work Experience</font></a>
+                        <a class="nav-link" href="#services">Work Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio"><font color="#FFFF00">Portfolio</font></a>
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact"><font color="#FFFF00">Contact</font></a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -70,9 +70,9 @@
     <header class="masthead">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading"><font color="#FFFF00">GATHER - ANALYZE - TRANSFORM</font></h1>
+                <h1 id="homeHeading">GATHER - ANALYZE - TRANSFORM</h1>
                 <hr>
-                <p><font color="#FFFF00">Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</font></p>
+                <p><font color="#FF8C00">Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</font></p>
                 <a class="btn btn-primary btn-xl" href="#about">About Me</a>
             </div>
         </div>
