--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p class="text-faded">Prior to my internship at Colaberry, I established a successful record of advancement in a field of analytics with ZS Associates. Starting as an Operation Associate, I worked to develop an Incentive Compensation system using SQL, which was used to calculate compensation for more than 3 thousand sales representatives for multi-billion pharmaceutical clients. I then progressed to my role in analytics, where I worked in the field data analytics to provide insights to my clients on its internal data, helping them in marketing their product. I was also successful in securing $12 Million funding of client renewal business for which I was awarded Operational Excellence Award which is eloquent of my business understanding. I take pride in the work I do and I really enjoy exploring data and crunching numbers to find some sense in them. Thanks to these and other experiences, I possess an essential skill set well suited to address the duties and responsibilities of the Data Scientist/Data Analyst/Marketing Analyst.</p>
                     <!--<a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>-->
                     <p class="text-faded">Click to download my resume<p>
-                    <a class="btn btn-primary btn-xl" href="/img/resume-logo.jpg" download>My Resume</a>
+                    <a class="btn btn-primary btn-xl" href="/file/resume.pdf" download>My Resume</a>
                 </div>
             </div>
         </div>
