--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <header class="masthead">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">GATHER - ANALYZE - TRANSFORM</h1>
+                <h1 id="homeHeading">Hi I'm Kshitij Yadav!</h1>
                 <hr>
                 <p><font color="#FF8C00">Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</font></p>
                 <a class="btn btn-primary btn-xl" href="#about">About Me</a>
