--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <!--<h3>Sturdy Templates</h3>-->
                         <img src="/img/zs.png" width="150" height="150">
                         <h3><a href="https://www.zs.com/">ZS Associates</a></h3>
-                        <p class="text-muted">Business Associate ( Business Analyst )</p>
+                        <p class="text-muted">Associate</p>
                      </div>
                 </div>
                 <div class="col-lg-6 text-center">
@@ -123,7 +123,7 @@
                         <!--<h3>Ready to Ship</h3>-->
                         <img src="/img/cola.png" width="150" height="150">
                         <h3><a href="http://www.colaberry.com/">Colaberry</a></h3>
-                        <p class="text-muted">Marketing Analyst and Data Science Intern</p>
+                        <p class="text-muted">Data Science Intern</p>
                     </div>
                 </div>
               
@@ -135,15 +135,15 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+                    <a class="portfolio-box" href="ihttps://github.com/kshitijyad/KaggleDataSurveyAnalysis">
                         <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Machine Learning
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Kaggle Data Survey Analysis
                                 </div>
                             </div>
                         </div>
