--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="ihttps://github.com/kshitijyad/KaggleDataSurveyAnalysis">
+                    <a class="portfolio-box" href="https://github.com/kshitijyad/KaggleDataSurveyAnalysis">
                         <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -150,15 +150,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+                    <a class="portfolio-box" href="https://github.com/kshitijyad/CreditAnalysis">
                         <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Machine Learning
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Credit Analysis
                                 </div>
                             </div>
                         </div>
