--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://github.com/kshitijyad/KaggleDataSurveyAnalysis">
+                    <h3><a href="https://github.com/kshitijyad/KaggleDataSurveyAnalysis">
                         <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
