--- a/index.html
+++ b/index.html
@@ -131,102 +131,161 @@
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="projects">
+      <div class="container" style="padding-top: 20px">
+          <div class="row">
+              <div class="col-lg-12 text-center">
+                  <h2 class="section-heading">Projects</h2>
+                  <hr class="primary">
+              </div>
+          </div>
+      </div>
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <h3><a href="https://github.com/kshitijyad/KaggleDataSurveyAnalysis">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Machine Learning
-                                </div>
-                                <div class="project-name">
-                                    Kaggle Data Survey Analysis
+            <div class="row no-gutter">
+                <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
+                    <div style="width :95%">
+                        <a href="https://github.com/kshitijyad/CreditAnalysis/blob/master/Credit_Analysis.ipynb" class="portfolio-box" >
+                            <img src="/img/cola.png" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                  <div class="project-category text-faded">
+                                      Internet of things
+                                  </div>
+                                    <div class="project-name">
+                                        Hydrobase
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                        <h3 style="text-align: center">Product Manager</h3></br>
+                        <p class="text-muted" style="font-size: small"> A control system and an analytics engine to help plants grow</p>
+                        <!--b class="text-muted">Accepted Poster at IEEE Viz Conference 2015!</b-->
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://github.com/kshitijyad/CreditAnalysis">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Machine Learning
-                                </div>
-                                <div class="project-name">
-                                    Credit Analysis
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="jeopardy.html" class="portfolio-box">
+                            <img src="img/jeopardy.png" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                  <div class="project-category text-faded">
+                                      Information Visualization
+                                  </div>
+                                    <div class="project-name">
+                                        This is Jeopardy!
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                        <h3 style="text-align: center">Info-Viz Engineer</h3></br>
+                        <p class="text-muted" style="font-size: small"> Get to know more about your favourite game show in a more visually appealing way.</p>
+                        <!--b class="text-muted">Accepted Poster at IEEE Viz Conference 2015!</b-->
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="nyce.html" class="portfolio-box">
+                            <img src="img/NYCe.png" class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Data Mining and Analytcis
+                                    </div>
+                                    <div class="project-name">
+                                        NYCe Taxi
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                        <h3 style="text-align: center">Machine Learning Engineer</h3></br>
+                        <p class="text-muted" style="font-size: small">The best tool to predict the Tip of a New York Taxi cab driver.</p>
+                        <!--b class="text-muted">Pay Smart!</b-->
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="memeoke.html" class="portfolio-box">
+                            <img src="img/memeoke.png"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Web Architechture
+                                    </div>
+                                    <div class="project-name">
+                                        Memeoke
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                        <h3 style="text-align: center">Backend Developer</h3></br>
+                        <p class="text-muted" style="font-size: small">The place to be if you want to sing your heart out to amazing lyrics and funny GIFs.</p>
+                        <!--b class="text-muted">Share your happiness!</b-->
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="travelbites.html" class="portfolio-box">
+                            <img src="img/travelbites.png"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        User Interface Design and Development
+                                    </div>
+                                    <div class="project-name">
+                                        Travel Bites
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                        <h3 style="text-align: center">UX Reseacher</h3></br>
+                        <p class="text-muted" style="font-size: small">The app that allows you to plan your travel iternary around food.</p>
+                        <!--b class="text-muted">A fun user research project with great people with love for food!!</b-->
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="anlp.html" class="portfolio-box">
+                            <img src="img/anlp.png"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Natural Language Processing
+                                    </div>
+                                    <div class="project-name">
+                                        Restaurant Ambience Tagger
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                        <h3 style="text-align: center">NLP Engineer</h3></br>
+                        <p class="text-muted" style="font-size: small">Classification model to assign these tags to restaurants based on non-linguistic as well as linguistic features.</p>
+                        <!--b class="text-muted">A fun user research project with great people with love for food!!</b-->
+                    </div>
+                </div>
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="cookcounty.html" class="portfolio-box">
+                            <img src="img/cookcounty.png"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Applied Data Analytics Project
+                                    </div>
+                                    <div class="project-name">
+                                        Cook County Hospital
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <h3 style="text-align: center">Data Science Consultant</h3></br>
+                        <p class="text-muted" style="font-size: small"> Strategy and recommendations for John H Stroger Hospital in Chicago in light of Affordable Heath care Act.</p>
+                        <!--b class="text-muted">A fun user research project with great people with love for food!!</b-->
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <!--<div class="call-to-action bg-dark">
         <div class="container text-center">
