--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/kshitijyad/CreditAnalysis/blob/master/Credit_Analysis.ipynb" class="portfolio-box" >
-                            <img src="/img/portfolio/1.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
