--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -84,7 +83,7 @@
         </div>
     </header>
 
-    <section class="bg-primary" id="about" style="height: 100%">
+    <section class="bg-primary" id="about" style="height: 50%">
         <div class="container">
             <img src="img/kshitij.png" class="img-responsive" alt="" style="margin :auto">
             <div class="row">
@@ -92,6 +91,8 @@
                     <hr class="light">
                     <p class="text-faded">Kshitij Yadav has garnered a deep and foundational academic base of knowledge along with practical professional experience in the business and data science field. In charting his rise from an early Business Associate to my most recent role as an Data Science Intern with Colaberry, MA, United States, his experience is substantive and multifaceted.</p>
                     <p class="text-faded"> In his previous role as Data Scientist and Analytics Associate, he developed his expertise in the field of Machine Learning and Data Science. As a recent Graduate, pursuing Masters in Business Analytics with concentration in Data Science, he has a unique skillset which consists of practical knowledge mixed along with his academia.</p>
+                    <p class="text-faded">Click to download my resume<p>
+                    <a class="btn btn-primary btn-xl" href="/file/Resume.pdf" download>My Resume</a>
                 </div>
             </div>
         </div>
