--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         </div>
     </header>
 
-    <section class="bg-primary" id="about" style="height: 50%">
+    <section class="bg-primary" id="about" style="height: 150%">
         <div class="container">
-            <img src="img/kshitij.png" class="img-responsive" alt="" style="margin :auto">
+            <img width="400" height="400" src="img/kshitij.png" class="img-responsive" alt="" style="margin :auto">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="light">
