--- a/index.html
+++ b/index.html
@@ -148,54 +148,50 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/kshitijyad/USAMassShooting/blob/master/MassShooting.ipynb" class="portfolio-box">
-                            <img src="img/portfolio/3.jpg class="img-responsive" alt="">
+                            <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
                                         Data Mining and Analytics
                                     </div>
                                     <div class="project-name">
-                                        
+                                        Mass Shooting
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Machine Learning Engineer</h3></br>
-                        <p class="text-muted" style="font-size: small">The best tool to predict the Tip of a New York Taxi cab driver.</p>
-                        <!--b class="text-muted">Pay Smart!</b-->
+                        <h3 style="text-align: center">Coming Soon</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="memeoke.html" class="portfolio-box">
-                            <img src="img/memeoke.png"  class="img-responsive" alt="">
+                        <a href="" class="portfolio-box">
+                            <img src="img/portfolio/4.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        Web Architechture
+                                        Data Visualization
                                     </div>
                                     <div class="project-name">
-                                        Memeoke
+                                        Coming Soon
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Backend Developer</h3></br>
-                        <p class="text-muted" style="font-size: small">The place to be if you want to sing your heart out to amazing lyrics and funny GIFs.</p>
-                        <!--b class="text-muted">Share your happiness!</b-->
+                        <h3 style="text-align: center">Coming Soon</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="travelbites.html" class="portfolio-box">
-                            <img src="img/travelbites.png"  class="img-responsive" alt="">
+                        <a href="" class="portfolio-box">
+                            <img src="img/portfolio/5.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        User Interface Design and Development
+                                        Machine Learning
                                     </div>
                                     <div class="project-name">
-                                        Travel Bites
+                                        Coming Soon
                                     </div>
                                 </div>
                             </div>
@@ -207,42 +203,20 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="anlp.html" class="portfolio-box">
-                            <img src="img/anlp.png"  class="img-responsive" alt="">
+                        <a href="" class="portfolio-box">
+                            <img src="img/portfolio/6.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
                                         Natural Language Processing
                                     </div>
                                     <div class="project-name">
-                                        Restaurant Ambience Tagger
+                                        Coming Soon
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">NLP Engineer</h3></br>
-                        <p class="text-muted" style="font-size: small">Classification model to assign these tags to restaurants based on non-linguistic as well as linguistic features.</p>
-                        <!--b class="text-muted">A fun user research project with great people with love for food!!</b-->
-                    </div>
-                </div>
-                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
-                    <div style="width :95%">
-                        <a href="cookcounty.html" class="portfolio-box">
-                            <img src="img/cookcounty.png"  class="img-responsive" alt="">
-                            <div class="portfolio-box-caption">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-category text-faded">
-                                        Applied Data Analytics Project
-                                    </div>
-                                    <div class="project-name">
-                                        Cook County Hospital
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <h3 style="text-align: center">Data Science Consultant</h3></br>
-                        <p class="text-muted" style="font-size: small"> Strategy and recommendations for John H Stroger Hospital in Chicago in light of Affordable Heath care Act.</p>
-                        <!--b class="text-muted">A fun user research project with great people with love for food!!</b-->
+                        <h3 style="text-align: center">Natrual Language Processing</h3></br>
                     </div>
                 </div>
             </div>
