--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="resume/kshitijyadav.pdf" target="_blank">Resume</a>
+                        <a class="page-scroll" href="/file/Resume.pdf" target="_blank">Resume</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -77,7 +77,7 @@
             <div class="header-content-inner">
                 <h1>HI! I'M Kshitij Yadav</h1>
                 <hr>
-                <p>Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</p>
+                <p><font color="#0E8A10"></font>Data is the sword of the 21st century, those who wield it the samurai! - Jonathan Rosenberg</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
         </div>
@@ -89,9 +89,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="light">
-                    <p class="text-faded">Kshitij Yadav has garnered a deep and foundational academic base of knowledge along with practical professional experience in the business and data science field. In charting his rise from an early Business Associate to my most recent role as an Data Science Intern with Colaberry, MA, United States, his experience is substantive and multifaceted.</p>
-                    <p class="text-faded"> In his previous role as Data Scientist and Analytics Associate, he developed his expertise in the field of Machine Learning and Data Science. As a recent Graduate, pursuing Masters in Business Analytics with concentration in Data Science, he has a unique skillset which consists of practical knowledge mixed along with his academia.</p>
-                    <p class="text-faded">Click to download my resume<p>
+                    <p class="text-faded">Kshitij Yadav has garnered a deep and foundational academic base of knowledge along with practical real world experience in the field of data science. In charting his rise from an early Business Associate to his most recent role as an Data Science Intern with Colaberry, MA, United States, he has been successful in gaining deep working knowledge of Data Science in various industries. His experience is substantive and multifaceted.</p>
+                    <p class="text-faded"> In his previous roles as Data Scientist and Analytics Associate, he developed his expertise in the field of Machine Learning and Data Science, developing algorithms, fine tunining them, building predictive models and successfully delivering his results to clients and leaders with his Data Visualization skills. As a recent Graduate, pursuing Masters in Business Analytics with concentration in Data Science, he has a unique skillset which consists of practical knowledge mixed along with his academia.</p>
+                    <p class="text-faded">Click to download Kshitij's resume<p>
                     <a class="btn btn-primary btn-xl" href="/file/Resume.pdf" download>My Resume</a>
                 </div>
             </div>
@@ -160,30 +160,30 @@
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Coming Soon</h3></br>
+                        <h3 style="text-align: center">Mass Shooting</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="" class="portfolio-box">
+                        <a href="https://github.com/kshitijyad/ElectionTweet2016/blob/master/ElectionTweet.ipynb" class="portfolio-box">
                             <img src="img/portfolio/4.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        Data Visualization
+                                        Sentimental Analysis
                                     </div>
                                     <div class="project-name">
-                                        Coming Soon
+                                        Twitter Tweet Analysis
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Coming Soon</h3></br>
+                        <h3 style="text-align: center">Twitter Tweet Analysis</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="" class="portfolio-box">
+                        <a href="https://github.com/kshitijyad/IRIS_Data_Analysis/blob/master/IRIS.ipynb" class="portfolio-box">
                             <img src="img/portfolio/5.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -191,14 +191,12 @@
                                         Machine Learning
                                     </div>
                                     <div class="project-name">
-                                        Coming Soon
+                                        IRIS Dataset
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">UX Reseacher</h3></br>
-                        <p class="text-muted" style="font-size: small">The app that allows you to plan your travel iternary around food.</p>
-                        <!--b class="text-muted">A fun user research project with great people with love for food!!</b-->
+                        <h3 style="text-align: center">IRIS Dataset</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
@@ -211,7 +209,7 @@
                                         Natural Language Processing
                                     </div>
                                     <div class="project-name">
-                                        Coming Soon
+                                        Work in Progress
                                     </div>
                                 </div>
                             </div>
