--- a/index.html
+++ b/index.html
@@ -201,20 +201,20 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="" class="portfolio-box">
+                        <a href="https://github.com/kshitijyad/IMDB_Tensor_Flow/blob/master/IMDB_Movie_Rating.ipynb" class="portfolio-box">
                             <img src="img/portfolio/6.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        Natural Language Processing
+                                        Tensor Flow
                                     </div>
                                     <div class="project-name">
-                                        Work in Progress
+                                        IMDB Rating Prediction
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Natrual Language Processing</h3></br>
+                        <h3 style="text-align: center">Tensor Flow</h3></br>
                     </div>
                 </div>
             </div>
