--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">TTime Series Analysis</h3></br>
+                        <h3 style="text-align: center">Time Series Analysis</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
