--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                                       Risk Analysis
                                   </div>
                                     <div class="project-name">
-                                        Risk and Severity Prediction
+                                        Risk and Severity 
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Risk and Severity Prediction</h3></br>
+                        <h3 style="text-align: center">Risk and Severity </h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
